--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+security.basic.enabled=false
+server.tomcat.uri-encoding=UTF-8
+spring.jackson.serialization.write_dates_as_timestamps=false
+# Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=michzuerch
+spring.datasource.password=lx0lc33a
+
 server.port=8080
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
